--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "A flexible copy module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint && jest",
+    "test:w": "jest --watch",
+    "lint": "eslint src/* --fix",
+    "clean": "rimraf ./bin",
+    "prebuild": "npm run clean && npm test",
+    "build": "tsc --removeComments --inlineSourceMap false && tsc ./src/index.ts --declaration --emitDeclarationOnly --outFile ./bin/index.d.ts",
+    "postbuild": "node tools/finalizeBuild && npx prettier bin/**/*.* --write && eslint bin/**/*.js --fix"
+  },
+  "engines": {
+    "node": ">=10.10.0"
   },
   "repository": {
     "type": "git",
@@ -18,9 +27,56 @@
   },
   "homepage": "https://github.com/DaClan008/cpy-flex#readme",
   "devDependencies": {
-    "ts-node": "^8.6.1"
+    "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.1",
+    "typescript": "^3.7.4"
   },
-  "dependencies": {
-    "@types/node": "^13.1.6"
+  "dependencies": {},
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "coveragePathIgnorePatterns": [
+      "./node_modules",
+      "./coverage",
+      "./.vscode",
+      "./__test__"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    },
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "clover"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ]
   }
 }
