pudate console.log for publishing.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cpy-flex",
-    "version": "0.0.2",
+    "version": "0.0.3-0",
     "description": "A flexible copy module",
     "main": "index.js",
     "scripts": {
