--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ node_js:
     - 10.13.0
 cache: npm
 
-script: npm run lint && npm run coverage
+script: npm run lint && npm test
 
 after_success:
-    - codecov
+    - codecov && cat ./coverage/lcof.info | ./node_modules/.bin/coveralls
 
 notifications:
     - emails: false
