--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "0.0.6",
     "description": "A flexible copy module",
     "main": "index.js",
+    "preferGlobal": true,
+    "bin": {
+        "@DaClan008/cpyFlex": "./cli/cpyFlex.js",
+        "cpyFlex": "./cli/cpyFlex.js"
+    },
     "scripts": {
         "test": "npm run lint && jest",
         "test:w": "jest --watchAll",
@@ -13,12 +18,14 @@
         "postbuild": "node tools/finalizeBuild && npx prettier bin/**/*.* --write && eslint bin/**/*.js --fix",
         "prepack": "npm run build",
         "pack": "node tools/publish",
-        "postpack": "npm run clean && npm run git && npm run clean",
+        "postpack": "npm run clean && npm run git",
         "pregit": "git add -A",
         "git": "git commit -m \"auto git commit\"",
         "postgit": "git push",
         "pub": "node ./tools/publish",
-        "testpack": "node tools/publish"
+    },
+    "publishConfig": {
+        "access": "public"
     },
     "engines": {
         "node": ">=10.10.0"
@@ -52,6 +59,7 @@
         "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-prettier": "^3.1.2",
+        "esm": "^3.2.25",
         "jest": "^24.9.0",
         "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
