--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "pregit": "git add -A",
         "git": "git commit -m \"auto git commit\"",
         "postgit": "git push",
-        "pub": "node ./tools/publish",
+        "pub": "node ./tools/publish"
     },
     "publishConfig": {
         "access": "public"
@@ -46,26 +46,26 @@
     },
     "homepage": "https://github.com/DaClan008/cpy-flex#readme",
     "devDependencies": {
-        "@types/jest": "^24.0.25",
-        "@types/node": "^13.1.6",
-        "@typescript-eslint/eslint-plugin": "^2.16.0",
-        "@typescript-eslint/parser": "^2.16.0",
-        "codecov": "^3.6.2",
-        "coveralls": "^3.0.9",
+        "@types/jest": "^25.1.4",
+        "@types/node": "^13.9.2",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
+        "@typescript-eslint/parser": "^2.24.0",
+        "codecov": "^3.6.5",
+        "coveralls": "^3.0.11",
         "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-config-airbnb-base": "^14.1.0",
         "eslint-config-node": "^4.0.0",
-        "eslint-config-prettier": "^6.9.0",
-        "eslint-plugin-import": "^2.20.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-prettier": "^3.1.2",
         "esm": "^3.2.25",
-        "jest": "^24.9.0",
+        "jest": "^25.1.0",
         "prettier": "^1.19.1",
-        "rimraf": "^3.0.0",
-        "ts-jest": "^24.3.0",
-        "ts-node": "^8.6.1",
-        "typescript": "^3.7.4"
+        "rimraf": "^3.0.2",
+        "ts-jest": "^25.2.1",
+        "ts-node": "^8.7.0",
+        "typescript": "^3.8.3"
     },
     "dependencies": {},
     "jest": {
